--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
     "jsonwebtoken": "^9.0.2",
+    "pdfkit": "^0.17.2",
     "react-toastify": "^11.0.5"
   }
 }
